# rust-snake-game

./: Cargo.toml  README.md
src/: direction.rs  entity.rs  game_engine.rs  game_object.rs  grid.rs  lib.rs  main.rs  texture_manager.rs  utils.rs
src/game_objects/: mod.rs  snake.rs
