[package]
name = "snake-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = "0.2.3"
num-traits = "0.2.15"
konst = "0.2.13"

[dependencies.sdl2]
git = "https://github.com/rust-sdl2/rust-sdl2"
default-features = false
features = ["image", "unsafe_textures"]
